[package]
name = "pumpfun-websocket-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# WebSocket and HTTP with TLS support
tungstenite = { version = "0.21", features = ["native-tls"] }
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# JSON-RPC and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-core = "18.0"

# Solana SDK
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
solana-account-decoder = "1.18"
borsh = "0.10"

# Logging and configuration
log = "0.4"
env_logger = "0.10"
config = "0.14"
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
bs58 = "0.5"

# Async utilities
async-trait = "0.1"
parking_lot = "0.12"